<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:text="@string/headquarters"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:text="@string/direct_seeding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="16sp"
        android:textColor="#FF9000"
        android:text="@string/incoming_call_notification"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/avchat_iv_incoming_call"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:src="@drawable/avchat_incomingcall_pickup"/>
    </FrameLayout>
</RelativeLayout>
